fix choose tour border on mobile

--- a/src/sass/blocks/choose-tour.sass
+++ b/src/sass/blocks/choose-tour.sass
@@ -74,6 +74,9 @@
         width: 450px
 
 @media (max-width: 720px)
+    .choose-tour__item
+        padding-bottom: 0px
+        height: 22px
     .choose-tour__list
         margin-top: 30px
         padding-bottom: 0px
